Update deutsch.ipynb notebook content

--- a/deutsch.ipynb
+++ b/deutsch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,9 @@
     "# Застосовуємо вентль Паулі Х до другого кубіту / Applying Pauli X gate to the second qubit\n",
     "circuit.pauli(pauli_string=\"X\", qubits=[quantum_register[1]])\n",
     "\n",
+    "# Для краси застосовуємо ідентичний (?) вентиль до першого кубіту / Applying indentity gate to pretify the diagram\n",
+    "circuit.id(quantum_register[0])\n",
+    "\n",
     "# Застосовуємо вентиль Адамара до усього регістру / Apllying Hadamard gate to the whole register\n",
     "circuit.h(quantum_register)\n",
     "\n",
@@ -115,6 +118,15 @@
     "\n",
     "# Виводимо діаграму / Plotting histogram\n",
     "# qk.visualization.plot_distribution(result.quasi_dists[0]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Посилання (Links)\n",
+    "- [qiskit.QuantumCircuit](https://docs.quantum.ibm.com/api/qiskit/qiskit.circuit.QuantumCircuit)\n",
+    "- [qiskit.circuit.library.PhaseOracle](https://docs.quantum.ibm.com/api/qiskit/qiskit.circuit.library.PhaseOracle)"
    ]
   }
  ],
