Small comment update

--- a/deutsch.ipynb
+++ b/deutsch.ipynb
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "# Застосовуємо вентиль Адамара до першого кубіта / Apllying Hadamard gate to the first qbit\n",
+    "# Застосовуємо вентиль Адамара до першого кубіта / Apllying Hadamard gate to the first qubit\n",
     "circuit.h(0)\n",
     "\n",
     "# Застосовуємо оракула до кубіту / Applying oracle to qubit\n",
@@ -95,7 +95,7 @@
     "# Створюємо Sampler для локальної симуляції / Creating Sampler to run simulation localy\n",
     "sampler = Sampler()\n",
     "\n",
-    "# Проводимо симуляцію / Running simulation of the circuit\n",
+    "# Проводимо симуляцію / Running circuit simulation\n",
     "job = sampler.run(circuits=[circuit])\n",
     "\n",
     "# Одержуємо результат / Getting result\n",
