Fixed factor finding algorithm
Previous version was just guessing divisors.
New one first finds presumable orders of some random number, than, via
computing gcd of that guesses, finds some divisor (maybe trivial).

--- a/HW2/mirco_shor.ipynb
+++ b/HW2/mirco_shor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "<Figure size 787.961x1036.78 with 1 Axes>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "<Figure size 369.906x1036.78 with 1 Axes>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "<Figure size 704.35x1036.78 with 1 Axes>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "<Figure size 704.35x1036.78 with 1 Axes>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "<Figure size 369.906x1036.78 with 1 Axes>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "<Figure size 704.35x1036.78 with 1 Axes>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "<Figure size 537.128x1036.78 with 1 Axes>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,50 +649,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
     "def factorization(num_iter):\n",
-    "    guesses = set(); i = 0\n",
+    "    guesses = set()\n",
+    "    i = 0\n",
+    "    random_number = np.random.randint(2, 15) # Обираємо випадкове взаємо просте з 15 число з відрізка [2, 14]\n",
+    "    while np.gcd(random_number, 15) != 1: # Нічого не робимо, якщо одразу знайши нетривіальний дільник, для первірки квантової частини\n",
+    "         random_number = np.random.randint(2, 15)\n",
+    "         \n",
     "    while i < num_iter:\n",
-    "        random_number = np.random.randint(2, 15) # Обираємо випадкове число 2 <= n <= 14\n",
+    "        measured_number = shor_circuit(random_number) # Застосовуємо алгоритм Шора для пошуку періода\n",
+    "        convergents = contfrac.convergents(fractions.Fraction(measured_number, 256)) # Утворюємо послідовінсть підходящих дробів\n",
     "\n",
-    "        if np.gcd(random_number, 15) != 1: # Нічого не робимо, якщо одразу знайши нетривіальний дільник, для первірки квантової частини\n",
-    "            continue # guesses.append(np.gcd(random_number, 15))\n",
-    "        else:\n",
-    "            measured_number = shor_circuit(random_number) # Застосовуємо алгоритм Шора до випадкового взаємо простого числа\n",
-    "            convergents = contfrac.convergents(fractions.Fraction(measured_number, 256)) # Утворюємо послідовінсть підходящих дробів\n",
+    "        for _, denom in convergents: # Проходимось по знаменникам дробів, меньших за 15\n",
+    "            if denom >= 15: \n",
+    "                break\n",
+    "            elif pow(random_number, denom, 15) == 1: # Додаємо \"кандидата\" в порядок\n",
+    "                guesses.add(denom)\n",
+    "        i += 1\n",
     "\n",
-    "            for _, denom in convergents: # Проходимось по знаменникам дробів, меньших за 15\n",
-    "                if denom >= 15: \n",
-    "                    break\n",
-    "                elif pow(random_number, denom, 15) == 1 and denom % 2 == 0: # Якщо num^q_i = 1 (mod 15) і q_i парне, шукаємо спільний знаменник\n",
-    "                    divisor = np.gcd(pow(random_number, denom // 2) + 1, 15)\n",
-    "                    if divisor not in [1, 15]: # Додаємо нетривіальний дільник\n",
-    "                        guesses.add(divisor)\n",
-    "            i += 1\n",
-    "    return guesses"
+    "    try:\n",
+    "        order = np.gcd.reduce(guesses).pop()\n",
+    "        if order % 2 == 0:\n",
+    "            return np.gcd(pow(random_number, order // 2) + 1, 15)\n",
+    "    except:\n",
+    "        return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{5}"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n"
+     ]
     }
    ],
    "source": [
-    "factorization(15)"
+    "for _ in range(5): print(factorization(20))"
    ]
   },
   {
