Fixed Margolus and Toffoli circuits.
Circuit functions had taken arguments in reversed order. Now that's
fixed.

--- a/HW1/adder.ipynb
+++ b/HW1/adder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,26 +43,27 @@
    "source": [
     "# Тоффолі та Марголус\n",
     "## Марголус\n",
-    "Нище наведена схема та відповідна реалізація вентиля Марголуса."
+    "Нище наведена схема та відповідна реалізація вентиля Марголуса.\n",
+    "<p align=\"center\"><img src=\"Images/Margolus.png\"></img></p>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](Images/Margolus.png)"
+    "<p align=\"center\" src=\"Images/Margolus.png\"></p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "@run_circuit\n",
     "def Margolus(x=0, y=0, z=0):\n",
     "    circuit = qk.QuantumCircuit(3, 1)\n",
-    "    circuit.initialize(f\"{x}{y}{z}\")\n",
+    "    circuit.initialize(f\"{z}{y}{x}\")\n",
     "    circuit.ry(pi/4, 2)\n",
     "    circuit.cx(1, 2)\n",
     "    circuit.ry(pi/4, 2)\n",
@@ -91,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "@run_circuit\n",
     "def Toffoli(x=0, y=0, z=0):\n",
     "    circuit = qk.QuantumCircuit(3, 1)\n",
-    "    circuit.initialize(f\"{x}{y}{z}\")\n",
+    "    circuit.initialize(f\"{z}{y}{x}\")\n",
     "    circuit.h(2)\n",
     "    circuit.cx(1, 2)\n",
     "    circuit.tdg(2)\n",
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +139,8 @@
       " Margolus gate answer:\t\t 0 \n",
       " Toffoli gate answer:\t\t 0\n",
       "Expected answer for CCX(0,0,1):  1 \n",
-      " Margolus gate answer:\t\t 0 \n",
-      " Toffoli gate answer:\t\t 0\n",
+      " Margolus gate answer:\t\t 1 \n",
+      " Toffoli gate answer:\t\t 1\n",
       "Expected answer for CCX(0,1,0):  0 \n",
       " Margolus gate answer:\t\t 0 \n",
       " Toffoli gate answer:\t\t 0\n",
@@ -147,8 +148,8 @@
       " Margolus gate answer:\t\t 1 \n",
       " Toffoli gate answer:\t\t 1\n",
       "Expected answer for CCX(1,0,0):  0 \n",
-      " Margolus gate answer:\t\t 1 \n",
-      " Toffoli gate answer:\t\t 1\n",
+      " Margolus gate answer:\t\t 0 \n",
+      " Toffoli gate answer:\t\t 0\n",
       "Expected answer for CCX(1,0,1):  1 \n",
       " Margolus gate answer:\t\t 1 \n",
       " Toffoli gate answer:\t\t 1\n",
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +205,7 @@
        "<Figure size 371.107x367.889 with 1 Axes>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "<Figure size 371.107x367.889 with 1 Axes>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +271,7 @@
        "<Figure size 287.496x284.278 with 1 Axes>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
